--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zfbase/zend1-bootstrap3",
+    "name": "wendrowycz/zend1-bootstrap3",
     "description": "Twitter Bootstrap v.3 Forms for Zend Framework v.1",
     "require": {
         "php": ">=5.3.0",
